# butler-cli

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  go.mod  install.sh  main.go  main.py  pyproject.toml  requirements.txt
.github/workflows/: code-style-format.yml  pre-release-build.yml  prerelease-build.yml
app/: __init__.py
app/cli/: dotfile.py
app/service/: dotfile.py
app/utils/: echo.py
butler/: __main__.py
butler/cli/: __init__.py  dotfile.py
butler/cli/tui/: __init__.py
butler/service/: dotfile.py
butler/tui/: __init__.py
butler/utils/: __init__.py
cmd/: dotfile.go  root.go  update.go
context/: config.go
dotfiles_cli/: main.py
dotfiles_cli/cli/: dotfile.py
dotfiles_cli/service/: dotfile.py
tests/: test_dotfiles_cli.py
utils/: fs.go
