[tool.poetry]
name = "butler"
version = "0.1.0"
description = ""
authors = ["redxiiikk <kai.he.0811@qq.com>"]
readme = "README.md"

[tool.poetry.scripts]
dotfiles_cli = "dotfiles_cli.main:app"

[tool.poetry.dependencies]
python = "^3.9"
typer = {extras = ["all"], version = "^0.4.0"}

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^21.9b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
