[tool.poetry]
name = "butler"
version = "0.1.0"
description = ""
authors = ["redxiiikk <redxiiikk@gmail.com>"]
readme = "README.md"

[tool.poetry.scripts]
butler = "butler.cli:app"

[tool.poetry.dependencies]
python = "^3.9"
typer = {extras = ["all"], version = "^0.4.0"}
rich = "^10.12.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^21.9b0"
isort = "^5.9.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
multi_line_output = 3
